<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:padding="25dp"
android:background="@drawable/custom_dialog_background">>

<TextView
    android:id="@+id/dialogTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Number of players"
    android:layout_gravity="center"
    android:textSize="24sp"
    android:textStyle="bold"
    android:textColor="@android:color/white"
    />

<EditText
    android:id="@+id/editMaxPlayers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Enter a number... "
    android:padding="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/create_post_editview_background"
    android:textColor="@android:color/black"
    android:ems="10"
    android:inputType="number"/>

</LinearLayout>
