...
                    android:layout_width="match_parent"
                    android:layout_height="143.5dp"
                    android:text="@string/planning_for_the_day_string"
                    />
                    

                <View   android:id="@+id/rectangle1"
                    android:background="@drawable/rectangle_1_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="200dp"
                    android:layout_width="match_parent"
                    android:layout_height="676dp" />

...
                        android:background="@drawable/rectangle_18_shape"
                        android:layout_marginStart="23dp"
                        android:layout_marginTop="394dp"
                        android:layout_width="38dp"
                        android:layout_height="74dp" />

                    <Button   android:id="@+id/Tuesday_button"
                        android:background="@drawable/rectangle_3_shape"
                        android:layout_marginStart="133dp"
                        android:layout_marginTop="394dp"
                        android:layout_width="38dp"
                        android:layout_height="74dp" />
                    <Button   android:id="@+id/Saturday_button"
                        android:background="@drawable/rectangle_16_shape"
                        android:layout_marginStart="350dp"
                        android:layout_marginTop="394dp"
                        android:layout_width="38dp"
                        android:layout_height="74dp" />

...
                    android:layout_width="226dp"
                    android:layout_height="96dp"
                    android:text="@string/your_timeline_string"
                    />

                <ListView
                    android:id="@+id/list_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="600dp"


                 />
                <ImageView
                    android:id="@+id/arrow_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="163dp"
                    android:layout_marginTop="480dp"
                    android:src="@drawable/arrow_1"
                    android:clickable="true"/>
...
